--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,20 +5,9 @@
 </ion-header>
 
 <ion-content padding>
-  <p id="temp">Test Temp</p>
-  <ion-slides pager>
+  <p id="temp" class="style">Test Temp</p>
+    <p id="wind-speed">Wind speed</p>
+    <p id="cloud-cover">Cloud cover</p>
+    <p id="pressure">Pressure </p>
 
-  <ion-slide style="background-color: green">
-    <h2>Slide 1</h2>
-  </ion-slide>
-
-  <ion-slide style="background-color: blue">
-    <h2>Slide 2</h2>
-  </ion-slide>
-
-  <ion-slide style="background-color: red">
-    <h2>Slide 3</h2>
-  </ion-slide>
-
-</ion-slides>
 </ion-content>
